<resources>
    <string name="app_name">Dienynas</string>
    <!-- SIDE MENU HEADER -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_not_logged_in">Not logged in</string>

    <!-- SIDE MENU -->
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_logout">Logout</string>

    <!-- TOOLBAR MENU-->
    <string name="menu_add_students">Add students</string>
    <string name="menu_add_task">Add task</string>
    <string name="menu_save">Save grades</string>
    <string name="menu_export">Export grades</string>

    <!--MAIN FRAGMENT-->
    <string name="text_type_student_id">Type your student ID:</string>
    <string name="main_search">Search</string>
    <string name="main_no_grades_found">No grades found</string>
    <string name="main_header_instr">INSTRUCTIONS</string>
    <string name="main_header_creating_group">Creating a group</string>
    <string name="main_instr_creating_group">To create a group press the hamburger icon on top left and navigate to groups. Then press the floating button and enter your group name and starting task.</string>
    <string name="main_header_add_bulk_stud">Adding bulk students</string>
    <string name="main_instr_add_bulk_stud">To successfully add students from Excel file, the file must be either .XLS or .XLSX format.\nExcel structure: cells must contain the keywords \'Kodas\' and \'Vardas\' then students names must follow and there should not be anything else after.</string>
    <string name="main_instr_group_usage">The main functionality of the group is inside menu with three vertical dots.</string>
    <string name="main_instr_active_dev">This application is under active development and bugs may appear. Please report them to \'laimiscl@gmail.com\'</string>

    <!-- GROUP CREATING FRAGMENT-->
    <string name="creating_group_name">Enter group name:</string>
    <string name="creating_group_task">Enter a task:</string>
    <string name="creating_group_name_hint">Group name</string>
    <string name="creating_group_task_hint">Group task</string>
    <string name="creating_create">Create</string>
    <string name="creating_create_group">Create group</string>

    <!-- ADD STUDENT DIALOG -->
    <string name="adding_enter_student_code">Enter student code</string>
    <string name="adding_enter_student_full_name">Enter student full name</string>
    <string name="adding_import_msg">Press button to select file from which to import students.\nCurrently supported formats: .XLS .XLSX</string>
    <string name="adding_select">Select</string>
    <string name="adding_add">Add</string>
    <string name="adding_success">Successfully added students!</string>
    <string name="adding_success_student">Successfully added student</string>
    <string name="adding_failed_student">Could not add student</string>
    <string name="adding_enter_task_name">Enter task name</string>
    <string name="adding_success_task">Successfully added task</string>
    <string name="adding_cancel">Canceled</string>

    <!-- ADD TASK DIALOG -->
    <string name="dialog_enter_task_name">Enter task name</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_submit">Submit</string>

    <!-- SINGLE GROUP FRAGMENT -->
    <string name="single_export_success">Exported successfully</string>
    <string name="single_export_fail">Export failed</string>
    <string name="single_save_success">Successfully saved grades</string>
    <string name="single_save_failure">Failed to save grades</string>

    <!-- SAMPLES -->
    <string name="sample_full_name">John Doe</string>
    <string name="sample_first_name">John</string>
    <string name="sample_last_name">Doe</string>
    <string name="sample_full_student_code" translatable="false">s012345</string>
    <string name="sample_student_code" translatable="false">012345</string>
    <string name="sample_exam_text">Exam</string>

    <!-- CONTENT DESCRIPTORS-->
    <string name="content_description_group_logo">Group logo</string>

    <!-- PERMISSIONS -->
    <string name="perms_grant_permission">PLEASE GRANT PERMISSION</string>
    <string name="perms_granted_permission">PERMISSION GRANTED</string>

    <!-- ERRORS -->
    <string name="error_enter_full_name">Enter full name</string>
    <string name="error_enter_name">Enter name</string>
    <string name="error_enter_code">Enter code</string>
    <string name="error_enter_task">Enter task</string>
    <string name="error_someting_went_wrong">Something went wrong. Try again</string>

    <!-- GROUPS FRAGMENT -->
    <string name="groups_no_groups_expl">You have no groups.\nConsider clicking the circle button on the bottom of the screen</string>
    <string name="groups_please_log_in">You are not logged in.\nPlease log in</string>

    <!-- GRADES FRAGMENT -->
    <string name="grades_your_grades">Your grades</string>

    <!-- TODO -->
    <string name="table_code_and_name">Code\nFirst Name\nLast Name</string>
    <string name="table_code">Code</string>

</resources>
